=== HEAD

* Raise NoMatchingRow if calling add_association with a primary key value that doesn't match an existing row (jeremyevans)

* Allow PostgreSQL add_constraint to support :not_valid option (jeremyevans)

* Allow CHECK constraints to have options by using an options hash as the constraint name (jeremyevans)

* Correctly raise error when using an invalid virtual row block function call (jeremyevans)

* Support REPLACE on SQLite via Dataset#replace and #multi_replace (etehtsea) (#681)

=== 4.0.0 (2013-07-01)

* Correctly parse composite primary keys on SQLite 3.7.16+ (jeremyevans)

* Recognize another disconnect error in the jdbc/oracle adapter (jeremyevans)

* Add pg_json_ops extension for calling JSON functions and operators in PostgreSQL 9.3+ (jeremyevans)

* Handle non-JSON plain strings, integers, and floats in PostgreSQL JSON columns in pg_json extension (jeremyevans)

* Dataset#from now accepts virtual row blocks (jeremyevans)

* Add Database#refresh_view on PostgreSQL to support refreshing materialized views (jeremyevans)

* Support the Database#drop_view :if_exists option on PostgreSQL (jeremyevans)

* Support the Database#{create,drop}_view :materialized option for creating materialized views in PostgreSQL 9.3+ (jeremyevans)

* Support the Database#create_view :recursive option for creating recursive views in PostgreSQL 9.3+ (jeremyevans)

* Support the Database#create_view :columns option for using explicit columns (jeremyevans)

* Support the Database#create_schema :owner and :if_not_exists options on PostgreSQL (jeremyevans)

* Support :index_type=>:gist option to create GIST full text indexes on PostgreSQL (jeremyevans)

* Add Postgres::ArrayOp#replace for the array_replace function in PostgreSQL 9.3+ (jeremyevans)

* Add Postgres::ArrayOp#remove for the array_remove function in PostgreSQL 9.3+ (jeremyevans)

* Add Postgres::ArrayOp#hstore for creating hstores from arrays (jeremyevans)
