@@ -696,6 +696,7 @@ module Sequel
       JAVA_BIG_DECIMAL      = Java::JavaMath::BigDecimal
       JAVA_BYTE_ARRAY       = Java::byte[]
       JAVA_UUID             = Java::JavaUtil::UUID
+      JAVA_HASH_MAP         = Java::JavaUtil::HashMap
 
       # Handle type conversions for common Java types.
       class TYPE_TRANSLATOR
@@ -717,6 +718,7 @@ module Sequel
           lines
         end
         def uuid(v) v.to_string end
+        def hash_map(v) v.to_hash end
       end
       TYPE_TRANSLATOR_INSTANCE = tt = TYPE_TRANSLATOR.new
 
@@ -730,6 +732,7 @@ module Sequel
       BLOB_METHOD = tt.method(:blob)
       CLOB_METHOD = tt.method(:clob)
       UUID_METHOD = tt.method(:uuid)
+      HASH_MAP_METHOD = tt.method(:hash_map)
 
       # Convert the given Java timestamp to an instance of Sequel.datetime_class.
       def convert_type_timestamp(v)
@@ -759,6 +762,8 @@ module Sequel
           CLOB_METHOD
         when JAVA_UUID
           UUID_METHOD
+        when JAVA_HASH_MAP
+          HASH_MAP_METHOD
         else
           false
         end
